Fix 'Not by AI' badge positioning/alignment

--- a/assets/stylesheets/sass/dock.sass
+++ b/assets/stylesheets/sass/dock.sass
@@ -1,26 +1,80 @@
 @use "variables" as vars
 @use "mixins" as mix
 
+// Dock [max] width
+// = number of apps in dock * (dock icon width) + 2 * (dock padding)
+// = $dock-items-count * vars.$dock-icon-size + 2 * vars.$padding
+// = $dock-items-count * vars.$dock-icon-size + vars.$padding-2x
+// = calc(($dock-items-count * vars.$dock-icon-size) + (2 * $dock-padding))
+// *= 1.05 (make 5% larger)
+
+// [Max] badge height is dock height
+// = 2 * (dock padding) + dock icon height
+// = 2 * (vars.$padding) + vars.$dock-icon-size
+// = vars.$padding-2x + vars.$dock-icon-size
+
 $dock-border-radius: 1.6rem
+$dock-padding: vars.$padding
+$dock-items-count: 7.5 // = 6 apps + divider (counted as 0.5) + 1 trash = 6 + 0.5 + 1
+$dock-max-width: calc((($dock-items-count * vars.$dock-icon-size) + (2 * $dock-padding)) * 1.05) // Make 5% larger for extra space
 $microtip-font-size: 1.35rem
 $microtip-bg-color: rgba(47, 48, 46, .88) // When updating this var, manually modify SVG fill as well
+$badge-max-height: calc((2 * $dock-padding) + vars.$dock-icon-size) //10rem
 
-.divider
+// Default (dark mode) colors for 'Not by AI' badge
+:root
+  --badge-fill: #FFF
+  --badge-background: #000
+  --badge-stroke: #ACACAC
+
+// Light mode colors for 'Not by AI' badge
+@media (prefers-color-scheme: light)
+  :root
+    --badge-fill: #000
+    --badge-background: #FFF
+    --badge-stroke: #000
+
+// Not by AI badge
+#not-ai
+  margin: 0 vars.$padding-half
+  height: auto
+  width: auto
+  display: flex
+  max-height: $badge-max-height
+
+  &-container
+    max-height: $badge-max-height
+    width: auto
+    height: auto
+    align-self: center // Center vertically
+
+    a
+      max-width: 12rem // Prevent link from extending past badge
+
+// Separates apps and trash
+.dock-divider
   border-left: 0.14rem solid rgba(255, 255, 255, 0.15)
+  color: vars.$font-color
+  margin: 0 vars.$padding-half 0 vars.$padding
 
 footer
   position: fixed
   bottom: vars.$padding
   width: 100%
-  display: inline-flex
+  display: grid
+  grid-template-columns: repeat(3, 1fr)
   justify-content: center
+
+  a
+    display: grid // Needed to vertically center the 'Not by AI' badge since <svg id="not-ai">'s parent is a <a> element
 
 #dock
   border: vars.$border-thickness-2x solid rgba(255, 255, 255, 0.05)
-  padding: vars.$padding
+  padding: $dock-padding
   z-index: 10
   grid-auto-flow: column
-  grid-gap: vars.$padding-quarter
+  max-width: $dock-max-width
+  justify-self: center
   background: vars.$dock-menu-background
   display: grid
   border-radius: $dock-border-radius
@@ -29,25 +83,24 @@ footer
   @include mix.disable-select()
   
   .icon
-    height: vars.$dock-icon-size
     width: vars.$dock-icon-size
     display: grid
     align-content: center
+    justify-content: stretch
     place-items: center
-    grid-template-columns: 1
+    grid-template-columns: repeat(auto-fit, minmax(calc(1.0 * vars.$dock-icon-size), 1fr)) // 1
     grid-template-rows: 1
 
     // Compatibility with IE
     > *:nth-child(1)
       grid-row: 1
-      grid-column: 1
+      grid-column: repeat(auto-fit, minmax(calc(1.0 * vars.$dock-icon-size), 1fr)) // 1
 
     img
       grid-column: 1 / -1
       grid-row: 1 / -1
       width: 100%
       height: 100%
-      max-width: 100%
       max-height: 100%
       object-fit: cover
       image-rendering: smooth
