--- a/assets/stylesheets/sass/style.sass
+++ b/assets/stylesheets/sass/style.sass
@@ -12,19 +12,6 @@ $scrollbar-color-thumb: rgba(255, 255, 255, 0.35)
 $scrollbar-color-track: rgba(255, 255, 255, 0.075)
 $scrollbar-width: 0.75rem
 
-// Default (dark mode) colors for 'Not by AI' badge
-:root
-  --badge-fill: #FFF
-  --badge-background: #000
-  --badge-stroke: #ACACAC
-
-// Light mode colors for 'Not by AI' badge
-@media (prefers-color-scheme: light)
-  :root
-    --badge-fill: #000
-    --badge-background: #FFF
-    --badge-stroke: #000
-
 :root, body
   background-attachment: fixed
 
@@ -142,14 +129,6 @@ body
       color: vars.$menubar-font-color
       text-shadow: 0 0 0.75rem rgba(0, 0, 0, 0.25)
       @include mix.disable-select()
-
-// Not by AI badge
-#not-ai
-  position: fixed
-  bottom: vars.$padding
-  left: vars.$padding-half
-  width: 10rem
-  z-index: 1000
 
 // BACKGROUND PARTICLES
 #particles-js
